--- a/index.css
+++ b/index.css
@@ -8,17 +8,7 @@ body{
     position: relative;
     isolation: isolate;
 }
-body::before{
-    position: absolute;
-    left: 0;
-    top: 0;
-    content: '';
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(256,256,256, 0.8);
-    z-index: -1;
-}
+
 .main-header{
     width: 100%;
     height: 100px;
@@ -94,6 +84,7 @@ body::before{
     align-items: left;
     border-bottom: 1px solid rgb(218, 210, 210);
     flex-direction: row;
+    word-break: break-all;
 }
 #main-container .sub-container .newCreateLine #checkbox{
     width: 20px;
@@ -105,7 +96,7 @@ body::before{
 #main-container .sub-container .deleteButton{
     display: flex;
     bottom: 0;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-top: auto;
 }
 
@@ -114,6 +105,7 @@ background-color: #E53935;
 border: none;
 color: white;
 padding: 15px 20px;
+cursor: pointer;
 
 }
 /* Input container */
@@ -174,4 +166,5 @@ padding: 15px 20px;
     cursor: pointer;
     color: #E53935;
 }
+
 
