--- a/index.css
+++ b/index.css
@@ -8,11 +8,11 @@ body{
     position: relative;
     isolation: isolate;
 }
-
 .main-header{
     width: 100%;
     height: 100px;
-    background-color: #4553B1;
+    /* background-color: #4553B1; */
+    background-color: #DC5780;
     display: block;
 }
 #main-container .sub-container{
