--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@ body{
 .main-header{
     width: 100%;
     height: 100px;
-    background-color: #4553B1;
+    background-color: #4553b1;
     display: block;
 }
 #main-container .sub-container{
