--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ body{
     background-attachment: fixed;
     min-height: 100vh;
     position: relative;
-    /* isolation: isolate; */
+    isolation: isolate;
 }
 .main-header{
     width: 100%;
